[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polytools"
version = "1.0.0"
description = "Polytools - Security & reverse engineering utilities"
authors = [
    { name = "David BERARD", email = "contact@davidberard.fr" },
]
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "pygments",
]

[project.urls]
Homepage = "https://github.com/polymorf/polytools"
